# NES-Emulator-in-Rust-

./: .gitignore  README.md
NES-Emu/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
NES-Emu/info/: instruction.txt  instruction_scraping.py
NES-Emu/scrape_opscodes/: Dockerfile  Reference.html  data.csv  docker-compose.yml  make_opscodes.py  opscode.py  opscode.rs  scrape_official_opscode.py  scrape_opscode.py  test.ipynb
NES-Emu/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  frame.rs  joypad.rs  main.rs  opscodes.rs  ppu.rs  render.rs  rom.rs  sound_test.rs
